# cuda

./: README.md  a.out  define.h  hostMemAllocate.cpp  kern.cu
cublas/gemm/: gemm.cc
cublas/gemv/: define.h  gemv.cc
lab/cuda-lab-exercises/lab_1/C/: lab01_ex1  lab01_ex1.cu  lab01_ex2  lab01_ex2.cu
lab/cuda-lab-exercises/lab_2/C/: define.h  lab02_ex3_6  lab02_ex3_6.cu
matrixTranspose/: Makefile  README.md  define.h  matrix_transpose  matrix_transpose.cu
openmp/: automic.c  hello.c  pi.c  reduction.c
raw2gray/: CMakeLists.txt  main.cpp
raw2gray/cuda_models/: CMakeLists.txt  cuda_kernel.cu  cuda_kernel.cuh
raw2gray/cuda_models/cmake/: ConfigureCopts.cmake  FindCUDALibs.cmake  Helpers.cmake
